# snapclient

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  i2s.tar  partitions.csv  sdkconfig  sdkconfig.old
components/MerusAudio/: CMakeLists.txt  Kconfig.projbuild  MerusAudio.c  component.mk
components/custom_board/: CMakeLists.txt  Kconfig.projbuild  component.mk
components/custom_board/generic_board/: board.c  board_pins_config.c
components/custom_board/ma120/: ma120.c
components/custom_board/ma120x0/: MerusAudio.c
components/custom_board/pcm51xx/: pcm51xx.c
components/dsp_processor/: CMakeLists.txt  Kconfig.projbuild  component.mk  dsp_processor.c
components/dsp_processor/include/: dsp_processor.h
components/esp-dsp/: CMakeLists.txt  dsps_biquad_f32_ae32.S  dsps_dotprode_f32_ae32.S
components/ethernet_interface/: CMakeLists.txt  Kconfig.projbuild  component.mk  ethernet_interface.c
components/ethernet_interface/include/: ethernet_interface.h
components/flac/: CMakeLists.txt  component.mk  config.h
components/libbuffer/: CMakeLists.txt  buffer.c
components/libbuffer/include/: buffer.h
components/libmedian/: CMakeLists.txt  LICENSE  MedianFilter.c  component.mk  median_example.txt
components/libmedian/include/: MedianFilter.h
components/libopus/: component.mk
components/libopus/include/: config.h
components/lightsnapcast/: CMakeLists.txt  player.c  snapcast.c
components/lightsnapcast/include/: player.h  (+1 more)
components/my_board/: CMakeLists.txt  component.mk
components/net_functions/: CMakeLists.txt  Kconfig.projbuild  component.mk  net_functions.c
components/opus/: CMakeLists.txt  component.mk  config.h
components/ota_server/: CMakeLists.txt  component.mk  ota_server.c
components/otp_server/: CMakeLists.txt  ota_server.c
components/protocol/: CMakeLists.txt  component.mk  protocol.c  protocol.spec
components/rtprx/: CMakeLists.txt  component.mk  rtprx.c
components/websocket/: CMakeLists.txt  Kconfig  LICENSE  README.md  component.mk  websocket.c  websocket_server.c
components/websocket_if/: CMakeLists.txt  websocket_if.c
components/wifi_interface/: CMakeLists.txt  Kconfig.projbuild  component.mk  wifi_interface.c
html/: graph.js  index.html  ma_if_ws.js  ma_tempmonitor.js  styles.css
main/: Kconfig.projbuild  main.c
snapcast/: snapserver.conf
(+45 files in other folders)
